# azuredebug

./: .env.example  bot.py  log1.txt  log2.txt  log3.txt  log4.txt  log5.txt  main.py  pyproject.toml
client/: client.html
